#137: implements schema promotion workflow
